--- a/style.css
+++ b/style.css
@@ -4,10 +4,81 @@ body{
     margin: 0;
     font-family: 'Bebas Neue', cursive;
 }
-h1{
-    color: red;
-    font-size: 45px;
-    letter-spacing: 10px;
-    padding: 10px;
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+img.logo {
+    width: 120px;
+    /* padding: 36px; */
+    padding-left: 55px;
+    padding-top: 27px;
+    /* padding: 27px; */
+}
+.langage {
+    border: 1px solid black;
+    width: 69px;
+    height: 26px;
+    font-size: 13px;
+    /* padding: 10px; */
+    margin-right: 22px;
+    background-color: #0000002e;
+    border-radius: 4px;
+}
+
+.signin {
+    background-color: red;
+    border: 1px solid red;
+    width: 69px;
+    font-size: 13px;
+    padding: 5px;
+    color: white;
+    border-radius: 4px;
+}
+.topbuttons {
+    padding-right: 42px;
+    margin-top: 20px;
+    /* display: flex; */
+    /* align-items: flex-end; */
+    padding-right: 65px;
+}
+
+
+
+@media screen and (max-width: 900px) 
+{
+    .topbuttons {
+        display: flex;
+        flex-direction: row;
+    }
+    img.logo {
+        width: 100px;
+        /* padding: 36px; */
+        padding-left: 25px;
+        padding-top: 35px;
+        /* padding: 27px; */
+    }
+    .topbuttons {
+        padding-right: 17px;
+        margin-top: 33px;
+        
+    }
+    .langage {
+        border: 1px solid black;
+        width: 70px;
+        font-size: 13px;
+        /* padding: 3px; */
+        margin-right: 7px;
+    }
+    .signin {
+        background-color: red;
+        border: 1px solid red;
+        width: 70px;
+        font-size: 13px;
+        /* padding: 10px; */
+        color: white;
+    }
 
 }
