--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ img.logo {
     /* background-color: black; */
     /* background-blend-mode: color-burn; */
     border-bottom: 8px solid #222;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
     max-width: inherit;
 }
 
